ensure that actions to rerender component when collapse is open by passing call backs to into the chart addtion

--- a/src/pages/collections/styles/local_adaptation_styles.css
+++ b/src/pages/collections/styles/local_adaptation_styles.css
@@ -56,25 +56,7 @@ body {
     padding-left: 3px;
   }
 
-.divergent-top {
-    width: 100vw;
-    height: 50vh;
-    display: grid;
-    grid-template-columns: .5fr 2fr .5fr;
-}
 
-#line-chart-group-1 {
-    width: 90vw;
-    margin-left: 5vw;
-}
 
-#arch-chart-group-1 {
-    width: 90vw;
-    margin-left: 5vw;
 
-}
 
-#dashboard {
-    width: 98vw;
-    margin-left: 1vw;
-}
